; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_render_main_view.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_render_main_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@obs = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_render_main_view() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %2 = icmp ne %struct.TYPE_4__* %1, null
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = call i32 @obs_view_render(i32* %7)
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @obs_view_render(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
